fix: view portfolio items on mobile

--- a/src/pages/portfolio-frame/PortfolioFrame.module.css
+++ b/src/pages/portfolio-frame/PortfolioFrame.module.css
@@ -21,3 +21,7 @@
 .table.portfolioItem:nth-child(2n+1) {
   background-color: var(--main-bg-color);
 }
+
+.sideBarMobile {
+  position: absolute;
+}
